# syft-code-queue

./: README.md  add_js_functions.py  example_cross_datasite_workflow.py  example_output_viewer.py  pyproject.toml  test_enhanced_syftperm.py  test_pending_for_others_fix.py  test_real_approval.py
backend/: main.py  models.py
examples/: DataOwner_Tutorial.ipynb  DataScientist_Tutorial.ipynb  Part 1 — Data Scientist Tutorial.ipynb  Part 2 — Data Owner Tutorail.ipynb  QuickStart.ipynb  README.md  SyftCodeQueue_Tutorial.ipynb  basic_usage.py  datasites_ping_demo.py  external_automation_example.py  job_timeout_example.py  nsai_integration.py  ping_test.py  ping_verification.py
examples/.ipynb_checkpoints/: SyftCodeQueue_Tutorial-checkpoint.ipynb
examples/example_job/: analyze.py
examples/my_analysis_package/: analyze.py
src/syft_code_queue/: __init__.py  client.py  models.py  runner.py  server.py
tests/: test_models.py
