[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syft-code-queue"
version = "0.1.0"
description = "Simple code execution queue for SyftBox"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "OpenMined", email = "info@openmined.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "syft-core",
    "loguru>=0.7.0",
    "pathlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/OpenMined/syft-code-queue"
Repository = "https://github.com/OpenMined/syft-code-queue.git"
Issues = "https://github.com/OpenMined/syft-code-queue/issues"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 